[package]
name = "seq"
version = "0.1.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
description = "Generic sequence container implementation for Rust."
license = "Apache-2.0"
documentation = "https://github.com/frehberg/seq-rs.git"
homepage = "https://github.com/frehberg/seq-rs.git"
repository = "https://github.com/frehberg/seq-rs.git"

[dependencies]
