[package]
name = "seq"
version = "0.6.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
description = "The module 'seq' provides the lightweight, generic sequence container 'Seq' for unmovable data and is embedded into the program during compile time."

license = "Apache-2.0"
readme = "README.md"
keywords = ["queue", "embedded", "unmovable"]
documentation = "https://docs.rs/seq"
homepage = "https://github.com/frehberg/seq-rs.git"
repository = "https://github.com/frehberg/seq-rs.git"

[dependencies]

[features]
benchmark = []
lite-seq = []
